--- a/templates/footer.html
+++ b/templates/footer.html
@@ -11,7 +11,7 @@
                 </div>
             </div>
             <div class="footer-col-2">
-                <img src="images/logo-white.png' %}">
+                <img src="{% static 'images/logo-white.png' %}">
                 <p>Our Purpose Is To Sustainably Make the Pleasure and Benefits of Sports Accessible to the Many.
                 </p>
             </div>
