--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
         <div class="container">
 <div class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="{% static 'images/logo.png' %}" alt="logo" width="125px"></a>
+        <a href="index.html"><img src="{% static 'images/logo1.png' %}" alt="logo" width="125px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
