--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,18 @@
-{% load static %}
-<!-- header -->
-  {% include 'header.html' %}
-<!-- /header -->
-<!-- banner -->
+{% extends 'blanklayout.html' %}
+<!-- {% load static %} -->
+
+
+ {% block banner %}
+
 {% include 'banner.html' %}
-<!-- /banner -->
 
-        </div>
-    </div>
+ {% endblock banner %}
+ <!-- because banner is inside header, i closed the the header div tag here -->
+</div>
+</div>
 
+
+{% block content %}
     <!-- Feadtued Categories -->
 
     <div class="categories">
@@ -26,7 +30,7 @@
             </div>
         </div>
     </div>
-
+    
     <!-- Featured Products -->
 
     <div class="small-container">
@@ -201,6 +205,7 @@
             </div>
         </div>
     </div>
+    {% endblock content %}
 
     <!-- Testimonial -->
     <!-- <div class="testimonial">
@@ -277,22 +282,7 @@
     </div> -->
 
     <!-- Footer -->
-   {% include 'footer.html' %}
+
     <!-- javascript -->
 
-    <script>
-        var MenuItems = document.getElementById("MenuItems");
-        MenuItems.style.maxHeight = "0px";
-        function menutoggle() {
-            if (MenuItems.style.maxHeight == "0px") {
-                MenuItems.style.maxHeight = "200px"
-            }
-            else {
-                MenuItems.style.maxHeight = "0px"
-            }
-        }
-    </script>
 
-</body>
-
-</html>
