--- a/templates/blanklayout.html
+++ b/templates/blanklayout.html
@@ -1,12 +1,47 @@
 {% load static %}
 <!-- header -->
-{% include 'header.html' %}
-<!-- banner -->
-{% block banner %}
+<!DOCTYPE html>
+<html lang="en">
 
-{% include 'banner.html' %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MangoTholi | Ecommerce Website</title>
+    <link rel="stylesheet" href= "{% static 'css/style.css' %}">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
 
-{% endblock banner %}
+<body>
+    
+    <div class="header">
+        <div class="container">
+<div class="navbar">
+    <div class="logo">
+        <a href="{% url 'home' %}"><img src="{% static 'images/logo1.png' %}" alt="logo" width="125px"></a>
+    </div>
+    <nav>
+        <ul id="MenuItems">
+            <li><a href="{% url 'home' %}">Home</a></li>
+            <li><a href="{% url 'products' %}">Products</a></li>
+            <li><a href="{% url 'account' %}">Account</a></li>
+            <li><a href="{% url 'account' %}">Your Orders</a></li>
+        </ul>
+    </nav>
+    <a href="cart.html"><img src="{% static 'images/cart.png' %}"" width="30px" height="30px"></a>
+    <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
+</div>
+{%block banner %}
+
+{%endblock banner %}
+</div>
+</div>
+
+
+
+
+
 <!-- content of the page -->
 {% block content %}
 
@@ -15,18 +50,3 @@
    <!-- Footer -->
 {% include 'footer.html' %}
 
-<script>
-    var MenuItems = document.getElementById("MenuItems");
-    MenuItems.style.maxHeight = "0px";
-    function menutoggle() {
-        if (MenuItems.style.maxHeight == "0px") {
-            MenuItems.style.maxHeight = "200px"
-        }
-        else {
-            MenuItems.style.maxHeight = "0px"
-        }
-    }
-</script>
-</body>
-
-</html>
