--- a/templates/header.html
+++ b/templates/header.html
@@ -18,12 +18,12 @@
         <div class="container">
 <div class="navbar">
     <div class="logo">
-        <a href="index.html"><img src="{% static 'images/logo1.png' %}" alt="logo" width="125px"></a>
+        <a href="{% url 'home' %}"><img src="{% static 'images/logo1.png' %}" alt="logo" width="125px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
             <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
+            <li><a href="{% url 'products' %}">Products</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Contact</a></li>
             <li><a href="account.html">Account</a></li>
@@ -31,4 +31,9 @@
     </nav>
     <a href="cart.html"><img src="{% static 'images/cart.png' %}"" width="30px" height="30px"></a>
     <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
+</div>
+
+
+
+</div>
 </div>
