--- a/templates/footer.html
+++ b/templates/footer.html
@@ -35,7 +35,7 @@
             </div>
         </div>
         <hr>
-        <p class="copyright">Copyright 2020 - Samwit Adhikary</p>
+        <p class="copyright">Copyright 2024 - MangoTholi</p>
     </div>
 </div>
 
