--- a/templates/cart.html
+++ b/templates/cart.html
@@ -12,7 +12,7 @@
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="images/buy-1.jpg">
+                    <img src="{% static 'images/buy-1.jpg' %}">
                     <div>
                         <p>Red Printed T-Shirt</p>
                         <small>Price: $50.00</small>
