--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,15 @@
 
     <div class="categories">
         <div class="small-container">
+            <h2 class="title">Collections</h2>
             <div class="row">
+                {% for collection in collections %}
                 <div class="col-3">
-                    <img src="{% static 'images/category-1.jpg' %}">
+                    <a href="{% url 'collectionview' collection.collection_name %}"><img src="{{collection.cover_img.url}}"></a>
+                    <center><h2>{{ collection.collection_name }}</h2></center>
                 </div>
-                <div class="col-3">
-                    <img src="{% static 'images/category-2.jpg' %}">
-                </div>
-                <div class="col-3">
-                    <img src="{% static 'images/category-3.jpg' %}">
-                </div>
+                {% endfor %}
+
             </div>
         </div>
     </div>
@@ -31,11 +30,22 @@
     <!-- Featured Products -->
 
     <div class="small-container">
+        <!-- <h2 class="title">Collections</h2>
+        <div class="row">
+            {% for collection in collections %}
+            <div class="col-4">
+                <a href="{% url 'collectionview' collection.collection_name %}"><img src="{{collection.cover_img.url}}"></a>
+                <h4>{{ collection.collection_name }}</h4>
+                <p></p>
+            </div>
+            {% endfor %}
+        </div> -->
         <h2 class="title">Featured Products</h2>
         <div class="row">
+            {% for product in featured %}
             <div class="col-4">
-                <a href="product_details.html"><img src="{% static 'images/product-1.jpg' %}"></a>
-                <h4>Red Printed T-Shirt</h4>
+                <img src="{{product.image.url}}">
+                <h4>{{product.title}}</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -43,97 +53,12 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star-o"></i>
                 </div>
-                <p>$50.00</p>
+                <p>Rs. {{product.price}}</p>
             </div>
-            <div class="col-4">
-                <img src="{% static 'images/product-2.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
-            <div class="col-4">
-                <img src="{% static 'images/product-3.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
-            <div class="col-4">
-                <img src="{% static 'images/product-4.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
+            {% endfor %}
+
         </div>
-        <h2 class="title">Latest Products</h2>
-        <div class="row">
-            <div class="col-4">
-                <img src="{% static 'images/product-5.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
-            <div class="col-4">
-                <img src="{% static 'images/product-6.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
-            <div class="col-4">
-                <img src="{% static 'images/product-7.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
-            <div class="col-4">
-                <img src="{% static 'images/product-8.jpg' %}">
-                <h4>Red Printed T-Shirt</h4>
-                <div class="rating">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star-o"></i>
-                </div>
-                <p>$50.00</p>
-            </div>
-        </div>
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-4">
                 <img src="{% static 'images/product-9.jpg' %}">
                 <h4>Red Printed T-Shirt</h4>
@@ -182,7 +107,7 @@
                 </div>
                 <p>$50.00</p>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <!-- Offer -->
