--- a/templates/header.html
+++ b/templates/header.html
@@ -18,7 +18,7 @@
         <div class="container">
 <div class="navbar">
     <div class="logo">
-        <a href="{% url 'home' %}"><img src="{% static 'images/logo1.png' %}" alt="logo" width="125px"></a>
+        <a href="{% url 'home' %}"><img src="{% static 'images/mttext.png' %}" alt="logo" width="125px" height="36px"></a>
     </div>
     <nav>
         <ul id="MenuItems">
@@ -29,7 +29,7 @@
             <li><a href="account.html">Account</a></li>
         </ul>
     </nav>
-    <a href="cart.html"><img src="{% static 'images/cart.png' %}"" width="30px" height="30px"></a>
+    <a href="cart.html"><img src="{% static 'images/cart.png' %}"" width="30px"></a>
     <img src="{% static 'images/menu.png' %}" class="menu-icon" onclick="menutoggle()">
 </div>
 
