--- a/templates/account.html
+++ b/templates/account.html
@@ -9,27 +9,38 @@
     <div class="container">
         <div class="row">
             <div class="col-2">
-                <img src="images/image1.png" width="100%">
+                <img src="{% static 'images/image1.png' %}" width="100%">
             </div>
             <div class="col-2">
+                {% if messages %}
+                <div class="msg-container">
+                    {% for message in messages %}
+                    <li class="{{message.tags}}">{{message}}</li>
+                    {% endfor %}
+                </div>
+                {% endif %}
                 <div class="form-container">
                     <div class="form-btn">
                         <span onclick="login()">Login</span>
                         <span onclick="register()">Register</span>
                         <hr id="Indicator">
                     </div>
-                    <form id="LoginForm">
-                        <input type="text" placeholder="Username">
+                    <form id="LoginForm" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="text" placeholder="Email">
                         <input type="password" placeholder="Password">
-                        <button type="submit" class="btn">Login</button>
-                        <a href="">Forget Password</a>
+                        <button name="login" type="submit" class="btn">Login</button>
+                        <a href="">Login with otp</a>
                     </form>
 
-                    <form id="RegForm">
-                        <input type="text" placeholder="Username">
-                        <input type="email" placeholder="Email">
-                        <input type="password" placeholder="Password">
-                        <button type="submit" class="btn">Register</button>
+                    <form id="RegForm" method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <input type="text" name="fname" required placeholder="Full Name">
+                        <input type="email" name="email" required placeholder="Email">
+                        <input type="text" name="phone" pattern="[0-9]{10}" required placeholder="Whatsapp Number">
+                        <textarea name="address" required placeholder="Address eg: House name, pincode, city, locality, nearest landmark" style="height: 50px; width: 250px;"></textarea>
+                        <input type="password" name="password" required placeholder="Password">
+                        <button name ="register" type="submit" class="btn">Register</button>
                     </form>
                 </div>
             </div>
@@ -54,17 +65,31 @@
     var LoginForm = document.getElementById("LoginForm");
     var RegForm = document.getElementById("RegForm");
     var Indicator = document.getElementById("Indicator");
-    function register() {
-        RegForm.style.transform = "translatex(0px)";
-        LoginForm.style.transform = "translatex(0px)";
-        Indicator.style.transform = "translateX(100px)";
+    
+    LoginForm.style.transform = "translatex(0px)";  // Already visible due to CSS
+    RegForm.style.transform = "translatex(300px)";
+    Indicator.style.transform = "translateX(0px)";  // Indicator points to login
 
-    }
-    function login() {
-        RegForm.style.transform = "translatex(300px)";
-        LoginForm.style.transform = "translatex(300px)";
-        Indicator.style.transform = "translate(0px)";
+function login() {
+  RegForm.style.transform = "translatex(300px)";
+  LoginForm.style.transform = "translatex(0px)";  // No need to change, already visible
+  Indicator.style.transform = "translate(0px)";
+}
 
-    }
+function register() {
+  RegForm.style.transform = "translatex(0px)";
+  LoginForm.style.transform = "translatex(-300px)"; 
+  Indicator.style.transform = "translateX(100px)";
+}
+
 </script>
+{% if register %}
+<script>
+    register()
+</script>
+{% else %}
+<script>
+    login()
+</script>
+{% endif %}
 {% endblock content %}
