--- a/templates/otp_page.html
+++ b/templates/otp_page.html
@@ -28,9 +28,8 @@
                     <form id="LoginForm" method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <input type="text" name="username" required placeholder="Email">
-                        <input type="password" name="password" required placeholder="Password">
-                        <button name="login" type="submit" class="btn">Login</button>
-                        <a href="{% url 'otppage' %}">Login with otp</a>
+                        <button name="login" type="submit" class="btn">Send OTP</button></form>
+                        <!-- <a href="{% url 'otppage' %}">Login with otp</a> -->
                     </form>
 
                     <form id="RegForm" method="POST" enctype="multipart/form-data">
