--- a/templates/banner.html
+++ b/templates/banner.html
@@ -5,7 +5,7 @@
         <h1>Kadayadi <br>Mone !</h1>
         <p>Success isn't always about greatness. It;s about consistency. Consistent <br> hard work gains
             success. Greatness will come.</p>
-        <a href="" class="btn">Explore Now &#8594;</a>
+        <a href="{% url 'products' %}" class="btn">Explore Now &#8594;</a>
     </div>
     <div class="col-2">
         <img src="{% static 'images/mtlogo.png' %}">
