--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,7 @@
 {% extends 'blanklayout.html' %}
 {% load static %}
+{% load gettotal %}
+{% load multiply %}
 
 {%block content%}
 <div class="small-container cart-page">
@@ -9,81 +11,57 @@
             <th>Quantity</th>
             <th>Subtotal</th>
         </tr>
+        {% if messages %}
+        {% for message in messages %}
         <tr>
             <td>
                 <div class="cart-info">
-                    <img src="{% static 'images/buy-1.jpg' %}">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
-                    </div>
+        <li class="{{message.tags}}">{{message}}</li>
                 </div>
             </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
         </tr>
-        <tr>
-            <td>
-                <div class="cart-info">
-                    <img src="images/buy-2.jpg">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
+        {% endfor %}
+        {% endif %}
+
+        {% for cartitem in cart.added_items.all %}
+            <tr>
+                <td>
+                    <div class="cart-info">
+                        <img src="{{cartitem.product.image.url}}">
+                        <div>
+                            <p>{{cartitem.product.title}}</p>
+                            <small>Price: {{cartitem.product.price}}</small>
+                            <br>
+                            <a href="{% url 'removeitem' cartitem.id %}">Remove</a>
+                        </div>
                     </div>
-                </div>
-            </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
-        </tr>
-        <tr>
-            <td>
-                <div class="cart-info">
-                    <img src="images/buy-3.jpg">
-                    <div>
-                        <p>Red Printed T-Shirt</p>
-                        <small>Price: $50.00</small>
-                        <br>
-                        <a href="">Remove</a>
-                    </div>
-                </div>
-            </td>
-            <td><input type="number" value="1"></td>
-            <td>$50.00</td>
-        </tr>
+                </td>
+                <td><input type="text" value="{{cartitem.quantity}}" readonly></td>
+                <td>₹ {% multiply cartitem.quantity cartitem.product.price %}</td>
+            </tr>
+        {% endfor %}
+
     </tbody></table>
+    {% if flag %}
     <div class="total-price">
         <table>
-            <tbody><tr>
-                <td>Subtotal</td>
-                <td>$200.00</td>
-            </tr>
-            <tr>
-                <td>Tax</td>
-                <td>$35.00</td>
-            </tr>
+            <tbody>
+                <form method="get" action="{% url 'orderpage' %}"></form>
             <tr>
                 <td>Total</td>
-                <td>$230.00</td>
+                <td name="total">${% gettotal cart %}</td>
+            </tr>
+            <tr>
+                <td>
+                    <form method="get" action="{% url 'orderpage' %}">
+                    <button type='submit' class="btn">Order Now</button>
+                    </form>
+                </td>
             </tr>
         </tbody></table>
     </div>
+    {% endif %}
 </div>
-<div style="text-align: center;">
-    <p style="margin-bottom: 10px;">As Razorpay is currently not accepting new onboarders, we have no choice but to include our QR code.</p>
-    <p style="margin-bottom: 10px;">Kindly make the payment from the registered mobile number.</p>
-    <p style="margin-bottom: 10px;">After you pay,click payment completed to ship your order.</p>
-    <p style="margin-bottom: 10px;">Once you click payment completed, you will recieve order confirmation message <br> in whatsapp within 3 hours.</p>
-    <div style="display: inline-block;">
-        <img src="{% static 'images/qr.png' %}" style="height: 500px; width: 500px; display: block; margin: 0 auto;">
-    </div>
-    <div style="margin-top: 10px;">
-        <a href="" class="btn">Process Order </a>
-</div>
-
 
 
 {% endblock content %}
