--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
         <div class="row">
             {% for product in featured %}
             <div class="col-4">
-                <img src="{{product.image.url}}">
+                <a href="{% url 'productdes' product.id %}"><img src="{{product.image.url}}"></a>
                 <h4>{{product.title}}</h4>
                 <div class="rating">
                     <i class="fa fa-star"></i>
@@ -115,11 +115,11 @@
         <div class="small-container">
             <div class="row">
                 <div class="col-2">
-                    <img src="{% static 'images/exclusive.png' %}" class="offer-img">
+                    <img src="{{exclusive.image.url}}" class="offer-img">
                 </div>
                 <div class="col-2">
                     <p>Exclusively Available on RedStore</p>
-                    <h1>Smart Band 4</h1>
+                    <h1>{{exclusive.title}}</h1>
                     <small>The Mi Smart Band 4 fearures a 39.9%larger (than Mi Band 3) AMOLED color full-touch display
                         with adjustable brightness, so everything is clear as can be.<br></small>
                     <a href="products.html" class="btn">Buy Now &#8594;</a>
