--- a/templates/productdes.html
+++ b/templates/productdes.html
@@ -27,16 +27,20 @@
             <p>Home / T-Shirt</p>
             <h1>{{product.title}}</h1>
             <h4>{{product.price}}</h4>
-            <select>
-                <option>Select Size</option>
-                <option>XXL</option>
-                <option>XL</option>
-                <option>L</option>
-                <option>M</option>
-                <option>S</option>
-            </select>
-            <input type="number" value="1">
-            <a href="" class="btn">Add To Cart</a>
+            <form action="{% url 'addtocart' %}" method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <select name="size" required>
+                    <option value="">Select Size</option>
+                    <option value="XXL">XXL</option>
+                    <option value="XL">XL</option>
+                    <option value="L">L</option>
+                    <option value="M">M</option>
+                    <option value="S">S</option>
+                </select>
+                <input type="number" name="quantity" id="quantity" min="1" oninput="validity.valid||(value='');" value="1">
+                <input type="hidden" name="id" value="{{product.id}}">
+                <button type="submit" class="btn">Add To Cart</button>
+            </form>            
 
             <h3>Product Details <i class="fa fa-indent"></i></h3>
             <br>
